# bevying_wasm

./: Cargo.toml  README.md  index.html  upload.json
pkg/: wasmcomm.d.ts  wasmcomm.js  wasmcomm_bg.wasm.d.ts
src/: main.rs
