[package]
name = "wasmcomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bevy = "0.9.1"
serde = "1.0.149"
serde_json = "1.0.89"
wasm-bindgen = { version = "0.2.83", features = ["serde", "serde-serialize"] }
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
	'File',
	'FileList',
  'HtmlLabelElement',
  'HtmlInputElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
]
